--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.springboot</groupId>
 	<artifactId>todoapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>todoapp</name>
 	<description>Springboot project for To-do list</description>
 	<properties>
